favicon scrollbar  fix tippy

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -12,6 +12,10 @@
   padding-bottom: 8px;
 }
 
+.menu-body {
+  overflow-y: auto;
+}
+
 .menu-item {
   width: 100%;
   justify-content: start;
@@ -31,6 +35,7 @@
 // Header Menu
 .header {
   position: relative;
+  flex-shrink: 0;
   height: 50px;
   margin-top: -8px;
 }
